--- a/styling.css
+++ b/styling.css
@@ -1,14 +1,15 @@
 :root {
-  --light-color: brown;
+  /* --light-color: brown; */
+  --light-color: rgb(219, 109, 58);
   --dark-color: #410914;
   --text-color: white;
   --link-color: rgb(194, 123, 123);
 }
 
 * {
-  font-family: "Cabin", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
+  /* font-family: "Cabin", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    Helvetica, "Neue", sans-serif;
+    Helvetica, "Neue", sans-serif; */
   font-weight: 600;
   font-size: 17px;
   line-height: 43px;
@@ -16,12 +17,16 @@
 }
 
 body {
-  background-image: url("https://cloud-fww00tdhd-hack-club-bot.vercel.app/0compute-ea4c57a4.png");
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-
-  background-position: center;
-  background-size: contain;
-  color: white;
+  /* background-image: url("https://cloud-fww00tdhd-hack-club-bot.vercel.app/0compute-ea4c57a4.png");
+background-position: center;
+background-size: contain;
+color: white; */
 }
 
 
@@ -127,11 +132,15 @@ header {
   height: 64px;
 }
 
+
 .navbar input {
+  display: flex;
+  align-items: flex-end;
   border: 1px solid rgb(62, 58, 58);
   border-radius: 14px;
   padding: -1px 9px;
   width: 163px;
+
 }
 
 header nav li {
@@ -200,6 +209,48 @@ section #image_to_hide {
 
 /* ABOUT SECTION */
 
+.about_content {
+  background: #000000d0;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  width: 90%;
+  max-width: 100%;
+  margin: 1em;
+}
+
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #FF4E50 50%, #F9D423 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: .2;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  animation-duration: 5s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+
 section .about {
   /* padding: 1px 60px 0px 60px; */
   width: 100%;
@@ -209,14 +260,11 @@ section .about {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
-}
-
-section .about {
   padding: 1px 60px 0px 60px;
   width: 100%;
   background: transparent;
   padding-top: 50px;
+
 }
 
 .contentbox h1 {
@@ -356,26 +404,10 @@ section .about {
   width: 100%;
   max-width: 1196px;
   margin: 0 auto;
-  /* background-color: #191919; */
   border-radius: 10px;
   padding: 20px 30px;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
-  animation: gradient 10s ease infinite;
-}
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
 }
 
 .contentbox h3 {
