--- a/styling.css
+++ b/styling.css
@@ -1,4 +1,5 @@
 :root {
+  /* --light-color: brown; */
   --light-color: rgb(219, 109, 58);
   --dark-color: #410914;
   --text-color: white;
@@ -16,21 +17,21 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    min-height: 100vh;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
- 
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
   /* background-image: url("https://cloud-fww00tdhd-hack-club-bot.vercel.app/0compute-ea4c57a4.png");
-  background-position: center;
-  background-size: contain;
-  color: white; */
+background-position: center;
+background-size: contain;
+color: white; */
 }
 
 
 /* for smooth scrolling effect  */
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -74,11 +75,7 @@ header {
 
 .navbar {
   background-color: #100f0f;
-  font-family: 'Tapestry', cursive;
-    font-size: 3rem;
-    font-weight: 300;
-  /* border-radius: 34px; */
-  
+  border-radius: 34px;
   height: 70px;
   width: 100%;
 }
@@ -119,18 +116,15 @@ header {
   }
 }
 
-/* .search {
-  margin: 0px 19px;
-  float: right;
-  color: white;
-  margin: 10px;
-} */
-
 .search {
   margin: 0px 19px;
   float: right;
   color: white;
   margin: 10px;
+}
+
+#search {
+  padding: 0 0.5rem;
 }
 
 #logo {
@@ -146,7 +140,7 @@ header {
   border-radius: 14px;
   padding: -1px 9px;
   width: 163px;
-  
+
 }
 
 header nav li {
@@ -160,7 +154,7 @@ header nav li a {
 
 header nav li a:hover {
   color: var(--light-color);
-  
+
   transition: color 0.3s ease;
 }
 
@@ -215,6 +209,48 @@ section #image_to_hide {
 
 /* ABOUT SECTION */
 
+.about_content {
+  background: #000000d0;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  width: 90%;
+  max-width: 100%;
+  margin: 1em;
+}
+
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #FF4E50 50%, #F9D423 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: .2;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  animation-duration: 5s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+
 section .about {
   /* padding: 1px 60px 0px 60px; */
   width: 100%;
@@ -224,28 +260,11 @@ section .about {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
-}
-
-section .about {
   padding: 1px 60px 0px 60px;
   width: 100%;
   background: transparent;
   padding-top: 50px;
-}
 
-.about_content{
-    background: #000000d0;  
-    color: white;
-    padding: 2em;
-    border-radius: 30px;
-    width: 90%;
-    max-width: 100%;
-    margin: 1em;
-
-  /* background-color: white;
-  margin: 50px;
-  padding: 50px; */
 }
 
 .contentbox h1 {
@@ -273,12 +292,7 @@ section .about {
 }
 
 .about_img {
-  margin-left: 250px;
-  padding-left: 100;
-  display: float;
-  align-items: center;
-  width: 50%;
-  height: 50%;
+  width: 60%;
 }
 
 .custom-btn {
@@ -390,26 +404,10 @@ section .about {
   width: 100%;
   max-width: 1196px;
   margin: 0 auto;
-  background-color: #191919;
   border-radius: 10px;
   padding: 20px 30px;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
-  animation: gradient 10s ease infinite;
-}
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
 }
 
 .contentbox h3 {
@@ -454,7 +452,79 @@ section .about {
 
 /* Projects section */
 .project h3 {
-  text-shadow: 6px -3px 2px rgb(72 32 32);
+  color: white;
+}
+
+.project {
+  background-color: #0c1222;
+}
+
+.grid-container {
+  display: grid;
+  width: 100%;
+  gap: 34px;
+  padding-bottom: 50px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-container>div {
+  background-color: #181A1B;
+  text-align: center;
+  margin: 0px;
+
+}
+
+.grid-item {
+  border: 1px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+
+}
+
+.grid-item .image-wrapper>img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  object-position: center;
+}
+
+.grid-item>a {
+  width: 100%;
+  padding: 0;
+  text-decoration: none;
+}
+
+.grid-item a>.box {
+  text-align: center;
+  color: white;
+}
+
+.grid-item .image-wrapper {
+  height: 250px;
+  overflow: hidden;
+}
+
+.box {
+  height: fit-content;
+  font-size: 30px;
+}
+
+.box>.box-content {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: small;
+  font-style: oblique;
+}
+
+@media only screen and (max-width: 900px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 567px) {
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 /* WORK/Contribution SECTION */
@@ -541,106 +611,120 @@ section .about {
 
 /* Contact Us */
 .container {
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
-	position:relative;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
 }
 
 /* #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; } */
 
 #contact {
-	background:#9d4343;
-	padding:25px;
-	margin:50px 0;
+  background: #9d4343;
+  padding: 25px;
+  margin: 50px 0;
 }
 
 #contact h3 {
-	color: #F96;
-	display: block;
-	font-size: 30px;
-	font-weight: 400;
+  color: #F96;
+  display: block;
+  font-size: 30px;
+  font-weight: 400;
   text-align: center;
   margin: 0px;
 }
 
 #contact h4 {
-	margin:5px 0 15px;
-	display:block;
-	font-size:15px;
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 15px;
   text-align: center;
 }
 
 fieldset {
-	border: medium none !important;
-	margin: 0 0 10px;
-	min-width: 100%;
-	padding: 0;
-	width: 100%;
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #CCC;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
 }
 
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid #AAA;
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #AAA;
 }
 
 #contact textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
+  height: 100px;
+  max-width: 100%;
+  resize: none;
 }
 
 #contact button[type="submit"] {
-	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#0CF;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-	font-size:15px;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #0CF;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
 }
 
 #contact button[type="submit"]:hover {
-	background:#09C;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
+  background: #09C;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
-
-#contact input:focus, #contact textarea:focus {
-	outline:0;
-	border:1px solid #999;
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #999;
+}
+
 ::-webkit-input-placeholder {
- color:#888;
+  color: #888;
 }
+
 :-moz-placeholder {
- color:#888;
+  color: #888;
 }
+
 ::-moz-placeholder {
- color:#888;
+  color: #888;
 }
+
 :-ms-input-placeholder {
- color:#888;
-} 
+  color: #888;
+}
 
 /* footer */
 
 footer .floating-footer {
-  
   font-size: small;
   border: 1px solid #9f8e92;
   border-top-left-radius: 34px;
@@ -653,7 +737,6 @@ footer .floating-footer {
 }
 
 footer {
-  background-color: #100f0f;
   position: relative;
   width: 100%;
   color: white;
@@ -766,8 +849,8 @@ footer p {
     line-height: 25px;
   }
 
-  section >section.about{
-    padding: 1px 3vw ;
+  section>section.about {
+    padding: 1px 3vw;
   }
 
   section .content {
@@ -885,50 +968,4 @@ footer p {
   .icons ul li:nth-child(4) a:before {
     background: #bf324e;
   }
-}
-
-
-
-.bg {
-  animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #FF4E50 50%, #F9D423 50%);
-  bottom:0;
-  left:-50%;
-  opacity:.2;
-  position:fixed;
-  right:-50%;
-  top:0;
-  z-index:-1;
-}
-
-.bg2 {
-animation-direction:alternate-reverse;
-animation-duration:4s;
-}
-
-.bg3 {
-animation-duration:5s;
-}
-
-.content {
-background-color:rgba(255, 255, 255, 0.98);
-border-radius:.25em;
-box-shadow:0 0 .25em rgba(0,0,0,.25);
-box-sizing:border-box;
-left:50%;
-padding:10vmin;
-position:fixed;
-text-align:center;
-top:50%;
-transform:translate(-50%, -50%);
-}
-
-
-@keyframes slide {
-0% {
-  transform:translateX(-25%);
-}
-100% {
-  transform:translateX(25%);
-}
 }
